# test-01

./: Cargo.toml  README.md  SYSTEM_SUMMARY.md  config.yaml
backups/: ae7f57f2-e28b-4d32-828f-34337a495ac0_20250902_025808.bak
src/: lib.rs  main.rs  test.rs
src/config/: mod.rs
src/orchestrator/: mod.rs
src/upload/: mod.rs
src/utils/: compression.rs  file_utils.rs  mod.rs  validation.rs
src/workflow/: mod.rs
uploads/records/: ae7f57f2-e28b-4d32-828f-34337a495ac0.json
workflows/: document_processing.json  simple_workflow.json
workflows/executions/: ed847bef-835c-4eb2-8034-20892a55afe8.json
