[package]
name = "rust-automation-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.2", features = ["derive"] }
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
crossbeam-channel = "0.5"
dashmap = "5.4"
